--- a/css/portal.css
+++ b/css/portal.css
@@ -17,7 +17,7 @@ html {
 h1 {
     font-weight: normal;
     margin: auto;
-    background: #fff;
+    background: rgb(65, 65, 65);
     line-height: 2.5em;
 }
 
