Changes h1 color to blue grey

--- a/css/portal.css
+++ b/css/portal.css
@@ -18,6 +18,7 @@ h1 {
     font-weight: normal;
     margin: auto;
     background: rgb(65, 65, 65);
+    color: rgb(114, 145, 180)
     line-height: 2.5em;
 }
 
