changes h1 color to blue grey

--- a/css/portal.css
+++ b/css/portal.css
@@ -19,6 +19,7 @@ h1 {
     margin: auto;
     background: rgb(65, 65, 65);
     line-height: 2.5em;
+    color: rgb(114, 145, 180)
 }
 
 main.wrapper {
