--- a/css/portal.css
+++ b/css/portal.css
@@ -38,13 +38,13 @@ h2,h3 {
 }
 
 a {
-    color:darkcyan;
+    color:rgb(12, 63, 97);
     text-decoration: none;
 }
 
 a:hover {
     color: whitesmoke;
-    background-color: darkcyan;
+    background-color: rgb(12, 63, 97;
     text-decoration: none;
 }
 
