--- a/css/portal.css
+++ b/css/portal.css
@@ -44,7 +44,7 @@ a {
 
 a:hover {
     color: whitesmoke;
-    background-color: rgb(12, 63, 97;
+    background-color: rgb(12, 63, 97)
     text-decoration: none;
 }
 
